[gd_scene load_steps=16 format=4 uid="uid://wo1fm5yw1mj7"]

[ext_resource type="Script" uid="uid://bpoa3amhscup0" path="res://Scenes/TrainingProgram/parts/GameplayLoop/parts/Structure3DContainer/Rendering/parts/Room/room_node_3d.gd" id="1_qihmr"]
[ext_resource type="FontFile" uid="uid://gev2kme45ctq" path="res://Fonts/Mx437_Portfolio_6x8.ttf" id="2_mku2i"]
[ext_resource type="Texture2D" uid="uid://ccd5c02ynn4ul" path="res://Media/rooms/barricks.jpg" id="3_mmxwi"]
[ext_resource type="PackedScene" uid="uid://dl5qwg47wln3a" path="res://Scenes/TrainingProgram/parts/GameplayLoop/parts/Structure3DContainer/parts/SpinLight.tscn" id="4_ohfms"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_4uhrp"]
blend_mode = 4
cull_mode = 1
shading_mode = 0
disable_ambient_light = true
disable_fog = true
texture_repeat = false

[sub_resource type="ArrayMesh" id="ArrayMesh_j72em"]
_surfaces = [{
"aabb": AABB(-2.05773, -2.05773, -2.05773, 4.11547, 4.11547, 4.11547),
"attribute_data": PackedByteArray("AAAAAAAAAACrqio/AAAAAKuqqj4AAAAAAACAPwAAAAAAAAAAAAAAP6uqKj8AAAA/q6qqPgAAAD8AAIA/AAAAP6uqqj4AAAAAAAAAAAAAAD+rqio/AAAAAKuqqj4AAAA/q6qqPgAAAD8AAAAAAACAP6uqKj8AAAA/q6qqPgAAgD+rqqo+AAAAP6uqKj8AAAA/q6oqPwAAAD8AAIA/AAAAP6uqqj4AAIA/q6oqPwAAgD+rqio/AACAPwAAgD8AAIA/"),
"format": 34359742487,
"index_count": 36,
"index_data": PackedByteArray("AAAEAAIAAgAEAAYAAQAFAAMAAwAFAAcACAAMAAoACgAMAA4ACQANAAsACwANAA8AEAAUABIAEgAUABYAEQAVABMAEwAVABcA"),
"material": SubResource("StandardMaterial3D_4uhrp"),
"name": "outline",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 24,
"vertex_data": PackedByteArray("7rEDwO6xA0DusQNA7rEDQO6xA0DusQPA7rEDQO6xA0DusQNA7rEDwO6xA0DusQPA7rEDwO6xA8DusQNA7rEDQO6xA8DusQPA7rEDQO6xA8DusQNA7rEDwO6xA8DusQPA7rEDQO6xA0DusQNA7rEDwO6xA0DusQPA7rEDQO6xA0DusQPA7rEDwO6xA0DusQNA7rEDQO6xA8DusQNA7rEDwO6xA8DusQPA7rEDQO6xA8DusQPA7rEDwO6xA8DusQNA7rEDQO6xA0DusQNA7rEDwO6xA8DusQNA7rEDwO6xA0DusQNA7rEDQO6xA8DusQNA7rEDQO6xA0DusQPA7rEDwO6xA8DusQPA7rEDwO6xA0DusQPA7rEDQO6xA8DusQPA/3//f////7//////AAD/v/9//3////+//////wAA/7//f/9/////v/////8AAP+//3//f////7//////AAD/v///AID/////AAAAgP9//7///wCA/////wAAAID/f/+///8AgP////8AAACA/3//v///AID/////AAAAgP9//78AgP//AAD/vwCAAAD///+/AID//wAA/78AgAAA////vwCA//8AAP+/AIAAAP///78AgP//AAD/vwCAAAD///+/")
}]
blend_shape_mode = 0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ku53p"]
transparency = 1
shading_mode = 0
disable_ambient_light = true
disable_fog = true
albedo_color = Color(0.221, 0.39, 0.255, 1)
distance_fade_mode = 1

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_fiat5"]
cull_mode = 1
albedo_color = Color(0, 0, 0, 1)
metallic = 0.2
metallic_specular = 0.52

[sub_resource type="BoxMesh" id="BoxMesh_uaacd"]
lightmap_size_hint = Vector2i(44, 66)
material = SubResource("StandardMaterial3D_fiat5")
size = Vector3(4, 4, 4)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ro31r"]
albedo_color = Color(0.716296, 0.716296, 0.716296, 1)
metallic = 0.64
metallic_specular = 1.0
rim = 0.06

[sub_resource type="BoxMesh" id="BoxMesh_xjphw"]
material = SubResource("StandardMaterial3D_ro31r")
size = Vector3(2, 1, 0.25)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_eggqm"]
albedo_color = Color(0.288518, 0.288518, 0.288518, 1)

[sub_resource type="BoxMesh" id="BoxMesh_q7wqx"]
material = SubResource("StandardMaterial3D_eggqm")
size = Vector3(0.25, 0.25, 0.25)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_7qdpb"]
albedo_color = Color(0, 0, 0, 1)
metallic = 0.85
metallic_specular = 0.47

[sub_resource type="BoxMesh" id="BoxMesh_pum0q"]
material = SubResource("StandardMaterial3D_7qdpb")
size = Vector3(0.5, 0.5, 0.5)

[node name="Node3D" type="Node3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.68341, 0, 0.346597)
script = ExtResource("1_qihmr")
current_state = 1

[node name="RoomNode" type="Node3D" parent="."]
transform = Transform3D(0.999958, 0, 0, 0, 1, 0, 0, 0, 0.999958, 0, -1.28901, 0)

[node name="MeshOutline" type="MeshInstance3D" parent="RoomNode"]
transform = Transform3D(1.05, 0, 0, 0, 1.05, 0, 0, 0, 1.05, 0, 0, 0)
layers = 16384
gi_mode = 0
mesh = SubResource("ArrayMesh_j72em")
skeleton = NodePath("../MainMesh")
surface_material_override/0 = SubResource("StandardMaterial3D_ku53p")

[node name="MainMesh" type="MeshInstance3D" parent="RoomNode"]
mesh = SubResource("BoxMesh_uaacd")

[node name="DoorMesh" type="MeshInstance3D" parent="RoomNode/MainMesh"]
transform = Transform3D(0.999999, 0, 0, 0, 1, 0, 0, 0, 0.999999, -0.83107, -1.50984, -2.0235)
mesh = SubResource("BoxMesh_xjphw")

[node name="RoomNumberLabel" type="Label3D" parent="RoomNode/MainMesh/DoorMesh"]
transform = Transform3D(-0.999999, 0, 8.74227e-08, 0, 0.999999, 0, -8.74226e-08, 0, -0.999999, -0.465734, 2.32829, -0.0438993)
pixel_size = 0.03
shaded = true
text = "1"
font = ExtResource("2_mku2i")
font_size = 24
outline_size = 0

[node name="OverheadLight" type="MeshInstance3D" parent="RoomNode/MainMesh/DoorMesh"]
transform = Transform3D(-0.999998, 0, 8.74226e-08, 0, 0.999999, 0, -8.74226e-08, 0, -0.999999, -0.465734, 3.19684, -0.0438993)
mesh = SubResource("BoxMesh_q7wqx")
skeleton = NodePath("../RoomNumberLabel")

[node name="SpotLight3D" type="SpotLight3D" parent="RoomNode/MainMesh/DoorMesh/OverheadLight"]
transform = Transform3D(0.987838, 0.0382481, 0.151004, -0.155769, 0.24254, 0.957555, -2.6867e-10, -0.96943, 0.245548, 0.111611, 0.948877, 0.309094)
light_color = Color(1, 1, 0.803922, 1)
light_energy = 0.4
light_indirect_energy = 0.0
light_volumetric_fog_energy = 0.2
shadow_enabled = true
spot_attenuation = -3.73
spot_angle = 22.34

[node name="DoorLabel" type="Label3D" parent="RoomNode/MainMesh/DoorMesh"]
transform = Transform3D(-0.999999, 0, -8.74227e-08, 0, 1, 0, 8.74227e-08, 0, -0.999999, -1.04828, 0.771639, 0.00132287)
shaded = true
text = "ROOM NAME"
font = ExtResource("2_mku2i")
font_size = 52
outline_size = 0
horizontal_alignment = 2
uppercase = true

[node name="ActivationIndicator" type="MeshInstance3D" parent="RoomNode/MainMesh"]
transform = Transform3D(0.0420168, 0, -0.999156, 0, 1, 0, 0.999156, 0, 0.0420168, 1.35431, 1.28177, -1.89626)
mesh = SubResource("BoxMesh_pum0q")
skeleton = NodePath("")

[node name="ActivationIndicatorPulseLight" type="SpotLight3D" parent="RoomNode/MainMesh/ActivationIndicator"]
transform = Transform3D(-0.185195, 0.676806, -0.712487, -0.000651772, 0.724943, 0.688808, 0.982702, 0.128028, -0.133815, -0.858612, 1.75495, 2.40468)
visible = false
light_color = Color(1, 0, 0, 1)
spot_range = 3.231
spot_attenuation = -10.0
spot_angle = 18.1421

[node name="ActivationIndicatorLight" type="OmniLight3D" parent="RoomNode/MainMesh/ActivationIndicator"]
transform = Transform3D(1, 0, 6.33299e-08, 0, 1, 0, -5.96046e-08, 0, 1, -0.458438, 0.00413728, 0.0430982)
light_color = Color(0.848652, 1.10701e-06, 0.448674, 1)
light_energy = 0.1
light_indirect_energy = 0.0
light_volumetric_fog_energy = 0.0
light_specular = 7.282
shadow_enabled = true
shadow_bias = 7.11
shadow_normal_bias = 0.0
omni_range = 2.40478
omni_attenuation = 7.079

[node name="ScpIndicator" type="MeshInstance3D" parent="RoomNode/MainMesh"]
transform = Transform3D(0.999583, 0, -0.0301734, 0, 1, 0, 0.0301734, 0, 0.999583, -1.99714, 1.28177, 1.2618)
mesh = SubResource("BoxMesh_pum0q")
skeleton = NodePath("")

[node name="Light" type="OmniLight3D" parent="RoomNode/MainMesh/ScpIndicator"]
transform = Transform3D(1, 0, 6.33299e-08, 0, 1, 0, -5.96046e-08, 0, 1, -0.378847, 0.00413728, 0.0430982)
light_color = Color(0.703621, 0.483991, 1, 1)
light_energy = 0.1
light_indirect_energy = 0.0
light_volumetric_fog_energy = 0.0
light_specular = 7.282
shadow_enabled = true
shadow_bias = 7.11
shadow_normal_bias = 0.0
omni_range = 2.40478
omni_attenuation = 6.854

[node name="NameLabel" type="Label3D" parent="RoomNode"]
transform = Transform3D(-1.00003, 0, -1.51e-07, 0, 1, 0, 1.51e-07, 0, -1.00003, -1.02939, 1.64182, 3.50949)
visible = false
layers = 128
pixel_size = 0.001
shaded = true
double_sided = false
fixed_size = true
text = "TEST TEXT"
font = ExtResource("2_mku2i")
outline_size = 32
horizontal_alignment = 2
width = 0.0

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="RoomNode/NameLabel"]
transform = Transform3D(0.999846, 0, -0.0180459, 0, 1, 0, 0.0180458, 0, 0.999846, 3.35835, -1.89822, 1.06952)
layers = 128
light_energy = 3.236
light_indirect_energy = 0.0
light_volumetric_fog_energy = 0.0
light_cull_mask = 4294966400

[node name="InsideViewport" type="SubViewport" parent="RoomNode"]
transparent_bg = true
size = Vector2i(300, 300)

[node name="PanelContainer" type="PanelContainer" parent="RoomNode/InsideViewport"]
offset_right = 300.0
offset_bottom = 300.0

[node name="TextureRect" type="TextureRect" parent="RoomNode/InsideViewport/PanelContainer"]
layout_mode = 2
texture = ExtResource("3_mmxwi")
expand_mode = 1
stretch_mode = 6

[node name="PreviewCamera" type="Camera3D" parent="."]
transform = Transform3D(-0.707107, 0.298836, -0.640857, 0, 0.906308, 0.422618, 0.707107, 0.298836, -0.640857, -3.5, 1.5, -3.5)
visible = false
projection = 1
size = 20.122

[node name="SpinLight" parent="." instance=ExtResource("4_ohfms")]
transform = Transform3D(0.088338, 0.996091, 0, -0.996091, 0.088338, 0, 0, 0, 1, 2.23072, -0.323841, 0.525419)
